--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <body>
     <h1>my first ever website</h1>
     <h2> I can now push to github</h2>
+    <p>feeling crazy for doing many mistakes</p>
+    <p>i am a ghost</p>
     </body>
 </html>
